tests/parsing/cmc/errors/151.expected
File "tests/parsing/cmc/errors/151.cmc", line 1, character 40-41:
1 | (check-system sys :reachable (a (= 1 2) b))
                                            ^
Error while parsing a reachability variable definition, read the symbol 'b',
      but expected a closing parenthesis.
